--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/NoExp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.ActionBarAPI-1.3.jar=ActionBarAPI-1.3.jar
 file.reference.spigot-1.8.8.jar=C:\\Users\\Kayi\\Desktop\\George Desktop\\Netbeans Workspace\\DreamWorldStarter\\spigot-1.8.8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.spigot-1.8.8.jar}
+    ${file.reference.spigot-1.8.8.jar}:\
+    ${file.reference.ActionBarAPI-1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
